--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,8 @@ h3 {
     border-width: 5px;
     box-sizing: content-box;
     display: flex;
-    font-size: 1em;
+    font-size: 2em;
+    font-weight: 1000;
     justify-content: center;
     text-align: center;
     width: 80%;
