adds some styles for bigger grids. Adds functionallity for the first user click not being a bomb, also for resetting the game without refreshing the page. Pending make the page more stylish, specially to make the grid dynamic

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
+body {
+    margin: 0;
+    height: 100vh;
+}
+
 h2 {
     text-align: center;
 }
 
 #header {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    justify-content: space-around;
 }
 
 #header div {
@@ -20,9 +25,10 @@ h3 {
 #board {
     background-color: #B0B0B0;
     border: 1px black solid;
-    height: 40vw;
+    height: 80vh;
     margin: 2% auto 2% auto;
-    width: 35vw;
+    width: 99vw;
+    max-width: 800px;
 }
 
 #mines-grid{
@@ -39,23 +45,32 @@ h3 {
 
 .mine {
     align-items: center;
-    background-color: #eee;
+    background-color: lightgray;
     border-style: outset;
-    border-width: 5px;
+    border-width: 0.2em;
     box-sizing: content-box;
     display: flex;
-    font-size: 2em;
     font-weight: 1000;
     justify-content: center;
     text-align: center;
-    width: 80%;
+    width: 85%;
+}
+
+.mine-opened {
+    border: none;
+    width: 95%;
+    height: 100%;
 }
 
 #game-over-div {
     align-items: center;
     display: flex;
-    font-size: 5em;
     justify-content: center;
+    font-size: 4em;
     position: absolute;
     z-index: 1;
+}
+
+#game-over-div p {
+    text-align: center;
 }
