--- a/css/styles.css
+++ b/css/styles.css
@@ -27,39 +27,58 @@ h3 {
     border: 1px black solid;
     height: 80vh;
     margin: 2% auto 2% auto;
-    width: 99vw;
+    width: 97vw;
     max-width: 800px;
+}
+
+#grid-wrapper {
+    display: flex;
+    justify-content: center;
+    max-height: 85%;
 }
 
 #mines-grid{
     display: grid;
-    width: 80%;
-    height: 85%;
+    max-width: 80%;
     margin: 0 auto 5% auto;
+    overflow: auto;
+    border: dotted black;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+#mines-grid::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.mines-grid {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .rows {
     display: grid;
-    height: 95%;
+    height: 100%;
 }
 
 .mine {
     align-items: center;
     background-color: lightgray;
     border-style: outset;
-    border-width: 0.2em;
+    border-width: 4px;
     box-sizing: content-box;
     display: flex;
     font-weight: 1000;
     justify-content: center;
     text-align: center;
-    width: 85%;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .mine-opened {
     border: none;
     width: 95%;
-    height: 100%;
+    height: 95%;
 }
 
 #game-over-div {
