--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
 
 h2 {
     text-align: center;
+    margin-top: 0;
 }
 
 #header {
@@ -25,10 +26,10 @@ h3 {
 #board {
     background-color: #B0B0B0;
     border: 1px black solid;
-    height: 80vh;
     margin: 2% auto 2% auto;
-    width: 97vw;
-    max-width: 800px;
+    max-width: 95vw;
+    padding-bottom: 2%;
+    max-height: 90vh;
 }
 
 #grid-wrapper {
@@ -40,9 +41,10 @@ h3 {
 #mines-grid{
     display: grid;
     max-width: 80%;
-    margin: 0 auto 5% auto;
+    /*margin: 0 auto 0 auto;*/
     overflow: auto;
     border: dotted black;
+    max-height: 80vh;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
