--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,14 @@ body {
 h2 {
     text-align: center;
     margin-top: 0;
+    margin-bottom: 0;
 }
 
 #header {
     display: flex;
     justify-content: space-around;
+    margin-bottom: 2%;
+    margin-top: 2%;
 }
 
 #header div {
@@ -21,12 +24,14 @@ h2 {
 
 h3 {
     text-align: center;
+    margin-bottom: 2%;
+    margin-top: 2%;
 }
 
 #board {
     background-color: #B0B0B0;
     border: 1px black solid;
-    margin: 2% auto 2% auto;
+    margin: 0% auto 2% auto;
     max-width: 95vw;
     padding-bottom: 2%;
     max-height: 90vh;
@@ -40,7 +45,7 @@ h3 {
 
 #mines-grid{
     display: grid;
-    max-width: 80%;
+    max-width: 92%;
     /*margin: 0 auto 0 auto;*/
     overflow: auto;
     border: dotted black;
@@ -86,6 +91,7 @@ h3 {
 #game-over-div {
     align-items: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     font-size: 4em;
     position: absolute;
@@ -94,4 +100,11 @@ h3 {
 
 #game-over-div p {
     text-align: center;
+}
+
+@media screen and (min-width: 700px )  {    
+    h2 {
+        margin-bottom: 1%;
+    }
+
 }
